# onemem

./: .env.example  .gitignore  GOAL.md  README.md  SKILL.md  V2.md  V3.md  V4.md  pyproject.toml
docs/: ARCHITECTURE.md  INTEGRATION.md
evals/: basic_memory.json  longmemeval_oracle_sample.json  temporal_basic.json  write_filter_basic.json
scripts/: gemini_smoke_test.py
src/onemem/: __init__.py  chatbot.py  cli.py  consolidator.py  dedupe.py  embedding_providers.py  embeddings.py  env.py  eval.py  index.py  maintenance.py  markdown_store.py  models.py  operations.py  reader.py  retrieval.py  runtime.py  server.py  summaries.py  temporal.py  text.py  write_policy.py
src/onemem/adapters/: __init__.py
tests/: test_embedding_providers.py  test_env.py  test_eval.py  test_longmemeval_import.py  test_maintenance.py  test_memory_flow.py  test_temporal.py  test_v3.py
