[project]
name = "onemem"
version = "0.1.0"
description = "File-backed operational memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OneMem contributors" }
]
keywords = ["ai", "memory", "retrieval", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.0"]
google = ["google-genai>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
onemem = "onemem.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
